--- a/html/projects.html
+++ b/html/projects.html
@@ -1,7 +1,6 @@
-
-<section class="projects-container">
-    <section class="projects" id="projects">
-        <h1 class="heading"> our projects </h1>
+<div class = "projects">
+<section class="projects" id="projects">
+        <h1 class = "heading"> our projects </h1>
         <div class="box-container">
             <a href="project-detail.html?project=1" class="box">
                 <div class="image">
@@ -77,7 +76,7 @@
             </a>
         </div>
         <a href="all-projects.html" class="btn">See More</a>
-    </section>
 </section>
+</div>
 
 
