--- a/html/project-detail.html
+++ b/html/project-detail.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Details - Sisic Construction</title>
-    <link rel="icon" type="image/x-icon" href="/images/sisic.png">
+    <link rel="icon" type="image/x-icon" href="../images/sisic.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
